--- a/GAB.VER.HTML
+++ b/GAB.VER.HTML
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ramybės kalnas</title>
-    <link rel="stylesheet" href="GAB.VER.CSS">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cardo&family=DM+Sans&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cardo&family=DM+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="GAB.VER.CSS">
 
 </head>
+
 <body>
     <header>
         <div class="top-header">
             <div class="container flex-container">
                 <div class="main-header">
-                    <ul class="flex-container">
-                        <li>Pagrindinis</li>
-                        <li><img src="mp logo.png" alt="Monte Paci"></li>
-                        <li>Meniu</li>
-                        <li><button>Registracija</button></li>
-                    </ul>
+                     <ul> <li><a href="#">Pagrindinis</a></li></ul>
+                     <div><a href="#"><img src="mp logo.png" alt="Monte Paci"></a></div>
+                     <div>
+                         <ul class="flex-container">
+                             <li><a href="#">Meniu</a></li>
+                             <li><button> Registracija</button></li>
+                         </ul>
+                     </div>
                 </div>
             </div>
         </div>
@@ -31,10 +36,29 @@
                 <h1>monte pacis</h1>
                 <h3>svetingumo kompleksas pažaislio venuolyne</h3>
                 <h5>monastic</h5>
-                <img src="ilga ft, pirma.jpg" alt="Pazaislis">
+                <img src="ilga ft, pirma.jpg" alt="Pazaislis" style="width:100%;">
+
+            </div>
+        </div>
+        <div class="mp">
+            <div class="service">
+                <img src="rest.jpg" alt="rest">
+                <h2>Restoranas</h2>
+                <p>Leiskite mums pasirūpinti maistu bei gėrimais, dovanokite sau prabangą tiesiog skanauti, bendrauti ir mėgautis</p>
+                <div class="service">
+                    <img src="restoranas (2).jpg" alt="vies">
+                    <h2>Viešbutis</h2>
+                    <p>Vienintelis viešbutis Lietuvoje priimtas į prestižinę Europos paveldo viešbučių federaciją “Heritage hotels of Europe” </p>
+                </div>
+                <div class="service">
+                    <img src="jusu sventes.jpg" alt="svent">
+                    <h2>Vieta jūsų šventėms</h2>
+                    <p>Pageidaujantiems įsimintinos šventės, ekomenduojame rezrvuotis visą “Monte Pacis” svetingumo kompleksą</p>
+                </div>
 
             </div>
         </div>
     </header>
 </body>
+
 </html>
